# IKT469-1-26V-Deep-Neural-Networks

./: .gitignore  README.md  main.py  pyproject.toml
assignment_1/: __init__.py  download_data.py
assignment_1/src/: main.py
assignment_1/src/data/: __init__.py  download_cifar10.py  download_data.py  preprocess.py
assignment_1/src/models/: __init__.py  deepCNN.py  deepNetwork.py  residualCNN.py  shallowCNN.py  shallowNetwork.py
assignment_1/src/utils/: __init__.py  evaluate.py  lossfunctions.py  predict.py  train.py
assignment_2/src/PartA/: self_attention2.py
assignment_2/src/PartB/: chatbot.py  download_data.py
assignment_3/: download-data.py  main.py
assignment_4/: .gitignore  README.md  assignment_4a.py  autoencoder_embeddings.py  compare_all_embeddings.py  contrastive_embeddings.py  foundation_embeddings.py  pyproject.toml  quick_start.py  requirements.txt
assignment_5/: .gitignore  README.md  pyproject.toml
assignment_5/src/: data.py  eval.py  main.py
assignment_5/src/models/: cnn.py  custom.py  inception.py  mixtureOfExpert.py  modules.py  resnet.py  squeezenet.py
assignment_5/src/partA/: __init__.py  example.py  main.py  measure_confidence.py  occlusion_sensitivity.py
assignment_6/: main.py
assignment_6/src/: data.py  evaluate.py  model.py  train.py
assignment_7/: main.py  task.md
assignment_7/TASKA/: pyproject.toml
assignment_7/TASKA/src/: a1.py  a2.py  a3.py  a4.py
assignment_7/src/: data.py  evaluate.py  model.py  train.py
assignment_8/: pyproject.toml
assignment_8/src/: main.py  model.py  train.py
