[project]
name = "ikt469-1-26v-deep-neural-networks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "clip",
    "kagglehub>=0.3.13",
    "matplotlib>=3.10.8",
    "opencv-python-headless>=4.13.0.90",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "ultralytics>=8.4.7",
]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }
