[project]
name = "assignment-4a"
version = "1.0.0"
description = "Assignment 4A: Learning Image Embeddings from Scratch"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
